--- a/Exploratory Data Analysis/Pizza/Pizza_Sales_Analysis.ipynb
+++ b/Exploratory Data Analysis/Pizza/Pizza_Sales_Analysis.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -191,17 +191,17 @@
        "4  Tomatoes, Red Peppers, Jalapeno Peppers, Red O...    M  16.00  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Read the CSV files\n",
-    "df1 = pd.read_csv(r\"order_details.csv\")\n",
-    "df2 = pd.read_csv(r\"orders.csv\")\n",
-    "df3 = pd.read_csv(r\"pizza_types.csv\", encoding='unicode_escape')\n",
-    "df4 = pd.read_csv(r\"pizzas.csv\")\n",
+    "df1 = pd.read_csv(r\"Dataset/order_details.csv\")\n",
+    "df2 = pd.read_csv(r\"Dataset/orders.csv\")\n",
+    "df3 = pd.read_csv(r\"Dataset/pizza_types.csv\", encoding='unicode_escape')\n",
+    "df4 = pd.read_csv(r\"Dataset/pizzas.csv\")\n",
     "\n",
     "# Merge the dataframes\n",
     "order_data = pd.merge(df1, df2, on='order_id')\n",
