--- a/Numpy/Numpy.ipynb
+++ b/Numpy/Numpy.ipynb
@@ -4533,7 +4533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -4549,7 +4549,7 @@
        "(array([30, 40, 50]), array([10, 30, 50]))"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4568,21 +4568,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[49,  1, 13, 95],\n",
-       "       [24, 31,  7, 60],\n",
-       "       [67, 46, 35, 67],\n",
-       "       [58, 41, 44, 68],\n",
-       "       [42, 95, 44, 50],\n",
-       "       [97, 95,  4, 46]], dtype=int32)"
+       "array([[44, 89, 79,  7],\n",
+       "       [28, 32, 36, 95],\n",
+       "       [81, 26, 29, 37],\n",
+       "       [55, 98, 92, 12],\n",
+       "       [16, 16, 62, 95],\n",
+       "       [46, 62, 42, 77]], dtype=int32)"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4594,21 +4594,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[False, False, False,  True],\n",
+       "array([[False,  True,  True, False],\n",
        "       [False, False, False,  True],\n",
-       "       [ True, False, False,  True],\n",
-       "       [ True, False, False,  True],\n",
-       "       [False,  True, False, False],\n",
-       "       [ True,  True, False, False]])"
+       "       [ True, False, False, False],\n",
+       "       [ True,  True,  True, False],\n",
+       "       [False, False,  True,  True],\n",
+       "       [False,  True, False,  True]])"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4619,16 +4619,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([95, 60, 67, 67, 58, 68, 95, 97, 95], dtype=int32)"
+       "array([89, 79, 95, 81, 55, 98, 92, 62, 95, 62, 77], dtype=int32)"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4640,21 +4640,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[False, False, False, False],\n",
-       "       [ True, False, False,  True],\n",
+       "array([[ True, False, False, False],\n",
+       "       [ True,  True,  True, False],\n",
        "       [False,  True, False, False],\n",
-       "       [ True, False,  True,  True],\n",
-       "       [ True, False,  True,  True],\n",
-       "       [False, False,  True,  True]])"
+       "       [False,  True,  True,  True],\n",
+       "       [ True,  True,  True, False],\n",
+       "       [ True,  True,  True, False]])"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4665,16 +4665,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([24, 60, 46, 58, 44, 68, 42, 44, 50,  4, 46], dtype=int32)"
+       "array([44, 28, 32, 36, 26, 98, 92, 12, 16, 16, 62, 46, 62, 42],\n",
+       "      dtype=int32)"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4686,38 +4687,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([60, 58, 68], dtype=int32)"
+       "array([98, 92, 62, 62], dtype=int32)"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# find all numbers greater than 50 and are even\n",
-    "G[(G > 50 ) & (G % 2 == 0)] "
+    "G[(G > 50) & (G % 2 == 0)] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 1, 13, 95, 24, 31, 60, 67, 46, 67, 58, 41, 44, 68, 95, 44, 50, 97,\n",
-       "       95,  4, 46], dtype=int32)"
+       "array([44, 89, 79, 32, 36, 95, 81, 26, 29, 37, 55, 92, 12, 16, 16, 62, 95,\n",
+       "       46, 62], dtype=int32)"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4729,21 +4730,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[49,  1, 13, 95],\n",
-       "       [24, 31,  7, 60],\n",
-       "       [67, 46, 35, 67],\n",
-       "       [58, 41, 44, 68],\n",
-       "       [42, 95, 44, 50],\n",
-       "       [97, 95,  4, 46]], dtype=int32)"
+       "array([[44, 89, 79,  7],\n",
+       "       [28, 32, 36, 95],\n",
+       "       [81, 26, 29, 37],\n",
+       "       [55, 98, 92, 12],\n",
+       "       [16, 16, 62, 95],\n",
+       "       [46, 62, 42, 77]], dtype=int32)"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4754,18 +4755,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[49,  1, 13, 95],\n",
-       "       [67, 46, 35, 67],\n",
-       "       [42, 95, 44, 50]], dtype=int32)"
+       "array([[44, 89, 79,  7],\n",
+       "       [81, 26, 29, 37],\n",
+       "       [16, 16, 62, 95]], dtype=int32)"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4786,7 +4787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -4795,7 +4796,7 @@
        "array([ 5, 10, 15, 20, 25])"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4810,7 +4811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -4822,7 +4823,7 @@
        "        [ 40, 100, 180]]))"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4845,7 +4846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4855,7 +4856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -4865,7 +4866,7 @@
        "       [4, 5, 6]])"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4877,7 +4878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -4886,13 +4887,13 @@
        "array([2, 4, 6])"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "loaded_arr[loaded_arr %2==0]"
+    "loaded_arr[loaded_arr % 2==0]"
    ]
   }
  ],
