--- a/Python Basics/9.File_Handling/file_handle.ipynb
+++ b/Python Basics/9.File_Handling/file_handle.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,14 +124,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is a test file.\n"
+      "This is text file\n"
      ]
     }
    ],
@@ -147,13 +147,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"D:\\\\Python\\\\Python Basics\\\\9.File_Handling\\\\test.txt\", 'w') as f:\n",
-    "    f.write(\"This is a test file.\")"
+    "with open(r\"D:\\Python\\Python Basics\\9.File_Handling\\test.txt\", 'w') as f:\n",
+    "    f.write(\"This is a test file.\")\n",
+    "    f.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +162,7 @@
      "output_type": "stream",
      "text": [
       "Content before writing: This is a test file.\n",
-      "Content after writing: This is new content.\n"
+      "Content after writing: is is new content.\n"
      ]
     }
    ],
@@ -173,7 +174,7 @@
     "    \n",
     "    file.seek(0)  # Set file pointer to the beginning\n",
     "    file.write('This is new content')  # Overwriting existing content\n",
-    "    file.seek(0)  # Reset pointer to the beginning again\n",
+    "    file.seek(2)  # Reset pointer to the beginning again\n",
     "    updated_content = file.read()  # Read the updated content\n",
     "    print('Content after writing:', updated_content)\n"
    ]
@@ -197,31 +198,33 @@
     "    file.write('This is a new line of text')  # Writing new content\n",
     "    file.seek(0)  # Set file pointer to the beginning\n",
     "    content = file.read()  # Reading the content back\n",
-    "    print('Content after writing:', content)\n"
+    "    print('Content after writing:', content)\n",
+    "    file.close()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(r\"D:\\Python\\Python Basics\\9.File_Handling\\test.txt\", 'a') as f:\n",
     "    # Append the text to the end of the file\n",
     "    f.write(\"\\nThis is another line.\")\n",
-    "    f.write(\"\\nThis is a test file.\")"
+    "    f.write(\"\\nThis is a test file.\")\n",
+    "    f.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "his is a test file.\n",
+      "This is a new line of text\n",
       "This is another line.\n",
       "This is a test file.\n",
       "This is a new line\n"
@@ -231,10 +234,9 @@
    "source": [
     "with open(r\"D:\\Python\\Python Basics\\9.File_Handling\\test.txt\", 'a+') as f:\n",
     "    f.write(\"\\nThis is a new line\")\n",
-    "    f.seek(1)\n",
+    "    f.seek(0)\n",
     "    print(f.read())\n",
-    "\n",
-    "f.close() "
+    "    f.close() "
    ]
   },
   {
@@ -246,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +266,6 @@
     "]\n",
     "\n",
     "# Function to create and write to the text file\n",
-    "\n",
     "def create_file(file_path, content):\n",
     "    with open(file_path, 'w') as file:\n",
     "        for line in content:\n",
@@ -283,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
