--- a/Python Basics/6.Functions.ipynb
+++ b/Python Basics/6.Functions.ipynb
@@ -510,9 +510,140 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f366189e",
+   "metadata": {},
+   "source": [
+    "### **Local and Global Variables in Python**\n",
+    "#### **Local Variables**\n",
+    "- A local variable is declared inside a function and can only be accessed within that function.\n",
+    "- It is limited to the block of code (function or method) where it is defined.\n",
+    "- The variable exists only while the function is being executed. Once the function ends, the variable is destroyed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee0cd00f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inside the function, x = 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "def my_function():\n",
+    "    x = 10  # Local variable\n",
+    "    print(\"Inside the function, x =\", x)\n",
+    "\n",
+    "my_function()\n",
+    "# print(x)  # This will raise an error because 'x' is not defined outside the function."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Global Variables**\n",
+    "- A global variable is declared outside any function and can be accessed both inside and outside functions.\n",
+    "- It is available throughout the entire program.\n",
+    "- The variable exists as long as the program is running.\n",
+    "- To modify a global variable inside a function, you need to use the `global` keyword. Without it, Python treats the variable as a local variable.\n",
+    "- In nested functions, when you want to modify a variable from the enclosing (non-global) scope, you use the `nonlocal` keyword."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53a4bc4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inside the function, y = 20\n",
+      "Outside the function, y = 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = 20  # Global variable\n",
+    "\n",
+    "def my_function():\n",
+    "    print(\"Inside the function, y =\", y)  # Accessing the global variable\n",
+    "\n",
+    "my_function()\n",
+    "print(\"Outside the function, y =\", y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d853b2ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inside the function, z = 40\n",
+      "Outside the function, z = 40\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Modifying Global Variables Inside a Function\n",
+    "z = 30  # Global variable\n",
+    "\n",
+    "def my_function():\n",
+    "    global z  # Declare that 'z' is the global variable\n",
+    "    z = z + 10  # Modify the global variable\n",
+    "    print(\"Inside the function, z =\", z)\n",
+    "\n",
+    "my_function()\n",
+    "print(\"Outside the function, z =\", z)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e85265e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inside inner function, x = 6\n",
+      "Inside outer function, x = 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "def outer_function():\n",
+    "    x = 5  # Enclosing scope variable\n",
+    "\n",
+    "    def inner_function():\n",
+    "        nonlocal x  # Modify variable from enclosing scope\n",
+    "        x = x + 1\n",
+    "        print(\"Inside inner function, x =\", x)\n",
+    "\n",
+    "    inner_function()\n",
+    "    print(\"Inside outer function, x =\", x)\n",
+    "\n",
+    "outer_function()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0beb85c4",
    "metadata": {},
    "source": [
+    "### **Argument and Keyword Argument**\n",
     "#### **Function with Arbitrary Arguments (`*args`)**\n",
     "- If you want to pass a variable number of arguments to a function, you can use *args."
    ]
@@ -823,7 +954,7 @@
    "id": "c905aae6",
    "metadata": {},
    "source": [
-    "#### **map() Function:**\n",
+    "### **map() Function:**\n",
     "- The `map()` function applies a given function to all items in an input list (or any other iterable) and returns a map object (which can be converted into a list, tuple, etc.).\n",
     "\n",
     "```map(function, iterable)```"
@@ -976,7 +1107,7 @@
    "id": "44af5809",
    "metadata": {},
    "source": [
-    "#### **filter() Function:**\n",
+    "### **filter() Function:**\n",
     "- The filter() function filters the elements in an iterable based on a given function that returns True or False. It returns a filter object (which can be converted into a list, tuple, etc.) containing elements that satisfy the condition.\n",
     "\n",
     "```filter(function, iterable)```"
@@ -1056,7 +1187,7 @@
    "id": "b58327fc",
    "metadata": {},
    "source": [
-    "#### **Reduce() Function:**\n",
+    "### **Reduce() Function:**\n",
     "- The reduce() function (from the functools module) applies a function to the elements of a sequence, cumulatively reducing the sequence to a single value.\n",
     "\n",
     "```reduce(function, iterable)```\n",
