--- a/Exploratory Data Analysis/Diwali_sales/Diwali_EDA.ipynb
+++ b/Exploratory Data Analysis/Diwali_sales/Diwali_EDA.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,11 +70,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = pd.read_csv(r\"D:\\Python\\Explorator Data Analysis\\Diwali_sales\\Diwali.csv\", encoding='unicode_escape')"
+    "df = pd.read_csv(r\"D:\\Python\\Exploratory Data Analysis\\Diwali_sales\\Diwali.csv\",encoding=\"unicode_escape\")"
    ]
   },
   {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -256,18 +256,18 @@
        "4  23877.0     NaN       NaN  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df1.head()"
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -276,13 +276,13 @@
        "(11251, 15)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df1.shape"
+    "df.shape"
    ]
   },
   {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -327,12 +327,12 @@
     }
    ],
    "source": [
-    "df1.info()"
+    "df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -344,13 +344,13 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df1.columns"
+    "df.columns"
    ]
   },
   {
@@ -374,17 +374,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### **Step 3: Data Cleaning**\n",
-    "\n",
-    "nunique() based on several unique values in each column and the data description, we can identify the continuous and categorical columns in the data. Duplicated data can be handled or removed based on further analysis"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -408,36 +399,35 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df1.nunique()"
+    "df.nunique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "User_ID : [1002903 1000732 1001990 ... 1001542 1004378 1005258]\n",
       "Cust_name : ['Sanskriti' 'Kartik' 'Bindu' ... 'Chris' 'Madan Mohan' 'Nicole']\n",
       "Product_ID : ['P00125942' 'P00110942' 'P00118542' ... 'P00307142' 'P00044742'\n",
       " 'P00296942']\n",
-      "Gender : ['F' 'M']\n",
+      "Gender : ['Female' 'Male']\n",
       "Age Group : ['26-35' '0-17' '18-25' '55+' '46-50' '51-55' '36-45']\n",
       "Age : [28 35 16 25 61 26 34 20 46 24 48 29 54 19 30 53 83 33 40 39 32 36 55 27\n",
       " 72 45 43 47 22 52 18 21 38 37 23 49 42 50 31 44 41 66 15 51 77 87 79 71\n",
       " 88 58 82 62 92 12 63 17 13 67 90 56 75 81 64 73 84 14 76 86 89 68 91 85\n",
       " 70 80 65 74 69 78 57 60 59]\n",
       "Marital_Status : [0 1]\n",
-      "State : ['Maharashtra' 'Andhra\\xa0Pradesh' 'Uttar Pradesh' 'Karnataka' 'Gujarat'\n",
+      "State : ['Maharashtra' 'Andhra Pradesh' 'Uttar Pradesh' 'Karnataka' 'Gujarat'\n",
       " 'Himachal Pradesh' 'Delhi' 'Madhya Pradesh' 'Jharkhand' 'Kerala'\n",
       " 'Haryana' 'Bihar' 'Rajasthan' 'Uttarakhand' 'Telangana' 'Punjab']\n",
       "Zone : ['Western' 'Southern' 'Central' 'Northern' 'Eastern']\n",
@@ -450,14 +440,22 @@
       " 'Household items' 'Pet Care' 'Veterinary' 'Office']\n",
       "Orders : [1 3 2 4]\n",
       "Amount : [23952. 23934. 23924. ...   213.   206.   188.]\n",
-      "Status : [nan]\n",
-      "unnamed1 : [nan]\n"
+      "Age_category : ['Adult' 'Tean' 'Young' 'Senior' 'Middle Age']\n"
      ]
     }
    ],
    "source": [
     "for col in df1.columns:\n",
     "    print(f\"{col} : {df1[col].unique()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Step 3: Data Cleaning**\n",
+    "\n",
+    "nunique() based on several unique values in each column and the data description, we can identify the continuous and categorical columns in the data. Duplicated data can be handled or removed based on further analysis"
    ]
   },
   {
@@ -473,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -497,13 +495,13 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df1.isnull().sum()\n",
+    "df.isnull().sum()\n",
     "#df.notnull().sum()\n",
     "#df.notna().sum()\n",
     "#df1.isna().sum()"
@@ -511,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -520,34 +518,34 @@
        "np.int64(8)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df1.duplicated().sum()"
+    "df.duplicated().sum()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Data Reduction**"
+    "**Removing Unnecessory Columns**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1.drop(['User_ID','Status','unnamed1'],axis=1, inplace=True)"
+    "df1 = df.drop(['User_ID','Status','unnamed1'],axis=1,)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +679,7 @@
        "4   Western  Food Processing             Auto       2  23877.0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +727,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +756,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +776,7 @@
        "(11243, 12)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,12 +789,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Feature Enginerring**"
+    "### **Creating The New Feature**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +804,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,11 +824,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1['Gender'].replace({'F':'Female', 'M':'Male'}, inplace=True)"
+    "df1['Gender'].replace({'F':'Female', 'M':'Male'}, inplace=True)\n",
+    "df1['State'].replace({'Andhra\\xa0Pradesh':'Andhra Pradesh'}, inplace=True)"
    ]
   },
   {
