--- a/Python Basics/6.Functions.ipynb
+++ b/Python Basics/6.Functions.ipynb
@@ -445,6 +445,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "edb5f135",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year = int(input(\"Enter year: \"))\n",
+    "if (year%400==0 and year%100==0) or (year%4==0 and year%100!=0):\n",
+    "    print(f\"{year} is leap year\")\n",
+    "else:\n",
+    "    print(f\"{year} not leap year\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 45,
    "id": "6597a160",
    "metadata": {},
