--- a/Pandas/sql_intigration.ipynb
+++ b/Pandas/sql_intigration.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,37 +54,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>S.No.</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Kilometers_Driven</th>\n",
+       "      <th>Fuel_Type</th>\n",
+       "      <th>Transmission</th>\n",
+       "      <th>Owner_Type</th>\n",
+       "      <th>Mileage</th>\n",
+       "      <th>Engine</th>\n",
+       "      <th>Power</th>\n",
+       "      <th>Seats</th>\n",
+       "      <th>New_Price</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Maruti Wagon R LXI CNG</td>\n",
+       "      <td>Mumbai</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>72000</td>\n",
+       "      <td>CNG</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>First</td>\n",
+       "      <td>26.6 km/kg</td>\n",
+       "      <td>998 CC</td>\n",
+       "      <td>58.16 bhp</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Hyundai Creta 1.6 CRDi SX Option</td>\n",
+       "      <td>Pune</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>41000</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>First</td>\n",
+       "      <td>19.67 kmpl</td>\n",
+       "      <td>1582 CC</td>\n",
+       "      <td>126.2 bhp</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>12.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Honda Jazz V</td>\n",
+       "      <td>Chennai</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>46000</td>\n",
+       "      <td>Petrol</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>First</td>\n",
+       "      <td>18.2 kmpl</td>\n",
+       "      <td>1199 CC</td>\n",
+       "      <td>88.7 bhp</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>8.61 Lakh</td>\n",
+       "      <td>4.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Maruti Ertiga VDI</td>\n",
+       "      <td>Chennai</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>87000</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>First</td>\n",
+       "      <td>20.77 kmpl</td>\n",
+       "      <td>1248 CC</td>\n",
+       "      <td>88.76 bhp</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>6.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Audi A4 New 2.0 TDI Multitronic</td>\n",
+       "      <td>Coimbatore</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>40670</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>Automatic</td>\n",
+       "      <td>Second</td>\n",
+       "      <td>15.2 kmpl</td>\n",
+       "      <td>1968 CC</td>\n",
+       "      <td>140.8 bhp</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>17.74</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "S.No.                   0\n",
-       "Name                    0\n",
-       "Location                0\n",
-       "Year                    0\n",
-       "Kilometers_Driven       0\n",
-       "Fuel_Type               0\n",
-       "Transmission            0\n",
-       "Owner_Type              0\n",
-       "Mileage                 2\n",
-       "Engine                 46\n",
-       "Power                  46\n",
-       "Seats                  53\n",
-       "New_Price            6247\n",
-       "Price                1234\n",
-       "dtype: int64"
+       "   S.No.                              Name    Location  Year  \\\n",
+       "0      0            Maruti Wagon R LXI CNG      Mumbai  2010   \n",
+       "1      1  Hyundai Creta 1.6 CRDi SX Option        Pune  2015   \n",
+       "2      2                      Honda Jazz V     Chennai  2011   \n",
+       "3      3                 Maruti Ertiga VDI     Chennai  2012   \n",
+       "4      4   Audi A4 New 2.0 TDI Multitronic  Coimbatore  2013   \n",
+       "\n",
+       "   Kilometers_Driven Fuel_Type Transmission Owner_Type     Mileage   Engine  \\\n",
+       "0              72000       CNG       Manual      First  26.6 km/kg   998 CC   \n",
+       "1              41000    Diesel       Manual      First  19.67 kmpl  1582 CC   \n",
+       "2              46000    Petrol       Manual      First   18.2 kmpl  1199 CC   \n",
+       "3              87000    Diesel       Manual      First  20.77 kmpl  1248 CC   \n",
+       "4              40670    Diesel    Automatic     Second   15.2 kmpl  1968 CC   \n",
+       "\n",
+       "       Power  Seats  New_Price  Price  \n",
+       "0  58.16 bhp    5.0       None   1.75  \n",
+       "1  126.2 bhp    5.0       None  12.50  \n",
+       "2   88.7 bhp    5.0  8.61 Lakh   4.50  \n",
+       "3  88.76 bhp    7.0       None   6.00  \n",
+       "4  140.8 bhp    5.0       None  17.74  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_sql(query,Conn)\n",
-    "df.isnull().sum()"
+    "df.head()"
    ]
   },
   {
