--- a/Python Basics/9.File_Handling/file_handle.ipynb
+++ b/Python Basics/9.File_Handling/file_handle.ipynb
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
        "'Current content of the file: I am a learner, Python is easy to learn'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
     }
    ],
    "source": [
-    "with open('myfile.txt') as f:\n",
+    "with open('myfile.txt', 'r') as f:\n",
     "    data = f.read().strip().split('\\n')\n",
     "    print(data)\n",
     "    f.close()"
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -642,14 +642,14 @@
        "['Hello', 'Hi', 'How ru', 'Good Night']"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "f = open('myfile.txt', 'r')\n",
-    "f.read().split('\\n')"
+    "f.read().strip().split('\\n')"
    ]
   },
   {
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +678,10 @@
       "Hello\n",
       "Hi\n",
       "How ru\n",
-      "Good Night\n"
+      "Good NightSthaya\n",
+      "\n",
+      "Python\n",
+      "Fila Handling\n"
      ]
     }
    ],
@@ -706,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +734,10 @@
       "Hello\n",
       "Hi\n",
       "How ru\n",
-      "Good Night\n",
+      "Good NightSthaya\n",
+      "\n",
+      "Python\n",
+      "Fila Handling\n",
       "\n"
      ]
     }
